# AI-Cargo-Pathfinder

./: LICENSE  README.md
AI Cargo Pathfinder/: AICargoPathfinder.spec  LICENSE  build_exe.py  main.py  pyproject.toml  requirements.txt
AI Cargo Pathfinder/Docs/: 01_Architecture_Overview.md  02_Environment_and_Physics.md  03_Robot_and_Autonomous_AI.md  04_Sensors_and_LiDAR.md  05_HUD_and_UI.md  06_Building_and_Packaging.md
AI Cargo Pathfinder/core/: __init__.py  app.py  constants.py  environment.py  hud.py  physics.py  procedural_geo.py  robot.py  sensors.py
panda3d/: bullet.cp314-win_amd64.pyd  ode.cp314-win_amd64.pyd  physics.cp314-win_amd64.pyd
